--- a/fpl/conf/base/catalog.yml
+++ b/fpl/conf/base/catalog.yml
@@ -39,33 +39,33 @@
 # (transcoding), templating and a way to reuse arguments that are frequently repeated. See more here:
 # https://kedro.readthedocs.io/en/stable/data/data_catalog.html
 
-companies:
-  type: pandas.CSVDataSet
-  filepath: data/01_raw/companies.csv
+MATCH_DATA:
+  type: pandas.SQLQueryDataSet
+  sql: "select shuttle, shuttle_id from spaceflights.shuttles;"
+  credentials: db_credentials
+# reviews:
+#   type: pandas.CSVDataSet
+#   filepath: data/01_raw/reviews.csv
 
-reviews:
-  type: pandas.CSVDataSet
-  filepath: data/01_raw/reviews.csv
+# shuttles:
+#   type: pandas.ExcelDataSet
+#   filepath: data/01_raw/shuttles.xlsx
+#   load_args:
+#     engine: openpyxl # Use modern Excel engine, it is the default since Kedro 0.18.0
 
-shuttles:
-  type: pandas.ExcelDataSet
-  filepath: data/01_raw/shuttles.xlsx
-  load_args:
-    engine: openpyxl # Use modern Excel engine, it is the default since Kedro 0.18.0
+# preprocessed_companies:
+#   type: pandas.ParquetDataSet
+#   filepath: data/02_intermediate/preprocessed_companies.pq
 
-preprocessed_companies:
-  type: pandas.ParquetDataSet
-  filepath: data/02_intermediate/preprocessed_companies.pq
+# preprocessed_shuttles:
+#   type: pandas.ParquetDataSet
+#   filepath: data/02_intermediate/preprocessed_shuttles.pq
 
-preprocessed_shuttles:
-  type: pandas.ParquetDataSet
-  filepath: data/02_intermediate/preprocessed_shuttles.pq
+# model_input_table:
+#   type: pandas.ParquetDataSet
+#   filepath: data/03_primary/model_input_table.pq
 
-model_input_table:
-  type: pandas.ParquetDataSet
-  filepath: data/03_primary/model_input_table.pq
-
-regressor:
-  type: pickle.PickleDataSet
-  filepath: data/06_models/regressor.pickle
-  versioned: true
+# regressor:
+#   type: pickle.PickleDataSet
+#   filepath: data/06_models/regressor.pickle
+#   versioned: true
