--- a/fpl/conf/base/catalog.yml
+++ b/fpl/conf/base/catalog.yml
@@ -1,71 +1,30 @@
-# Here you can define all your data sets by using simple YAML syntax.
-#
-# Documentation for this file format can be found in "The Data Catalog"
-# Link: https://kedro.readthedocs.io/en/stable/data/data_catalog.html
-#
-# We support interacting with a variety of data stores including local file systems, cloud, network and HDFS
-#
-# An example data set definition can look as follows:
-#
-#bikes:
-#  type: pandas.CSVDataSet
-#  filepath: "data/01_raw/bikes.csv"
-#
-#weather:
-#  type: spark.SparkDataSet
-#  filepath: s3a://your_bucket/data/01_raw/weather*
-#  file_format: csv
-#  credentials: dev_s3
-#  load_args:
-#    header: True
-#    inferSchema: True
-#  save_args:
-#    sep: '|'
-#    header: True
-#
-#scooters:
-#  type: pandas.SQLTableDataSet
-#  credentials: scooters_credentials
-#  table_name: scooters
-#  load_args:
-#    index_col: ['name']
-#    columns: ['name', 'gear']
-#  save_args:
-#    if_exists: 'replace'
-#    # if_exists: 'fail'
-#    # if_exists: 'append'
-#
-# The Data Catalog supports being able to reference the same file using two different DataSet implementations
-# (transcoding), templating and a way to reuse arguments that are frequently repeated. See more here:
-# https://kedro.readthedocs.io/en/stable/data/data_catalog.html
+# 01 Raw Data
+# 02 Intermediate Data
+# 03 Model Inputs (Train/Test)
+# 04 Models
+# 05 Model Outputs
+# 06 Serving
 
 MATCH_DATA:
-  type: pandas.SQLQueryDataSet
-  sql: "select shuttle, shuttle_id from spaceflights.shuttles;"
+  type: pandas.SQLTableDataSet
+  table_name: 01_TEAM_MATCH_LOG
   credentials: db_credentials
-# reviews:
-#   type: pandas.CSVDataSet
-#   filepath: data/01_raw/reviews.csv
 
-# shuttles:
-#   type: pandas.ExcelDataSet
-#   filepath: data/01_raw/shuttles.xlsx
-#   load_args:
-#     engine: openpyxl # Use modern Excel engine, it is the default since Kedro 0.18.0
+TEAM_MATCH_LOG:
+  type: pandas.SQLTableDataSet
+  table_name: 01_TEAM_MATCH_LOG
+  credentials: db_credentials
 
-# preprocessed_companies:
-#   type: pandas.ParquetDataSet
-#   filepath: data/02_intermediate/preprocessed_companies.pq
+ELO_DATA:
+  type: pandas.SQLTableDataSet
+  table_name: 02_ELO_DATA
+  credentials: db_credentials
+  save_args:
+    if_exists: replace
 
-# preprocessed_shuttles:
-#   type: pandas.ParquetDataSet
-#   filepath: data/02_intermediate/preprocessed_shuttles.pq
-
-# model_input_table:
-#   type: pandas.ParquetDataSet
-#   filepath: data/03_primary/model_input_table.pq
-
-# regressor:
-#   type: pickle.PickleDataSet
-#   filepath: data/06_models/regressor.pickle
-#   versioned: true
+PROCESSED_DATA:
+  type: pandas.SQLTableDataSet
+  table_name: 02_PROCESSED_DATA
+  credentials: db_credentials
+  save_args:
+    if_exists: replace
