--- a/fpl/src/requirements.txt
+++ b/fpl/src/requirements.txt
@@ -1,6 +1,13 @@
-kedro~=0.18.7
-kedro-datasets[pandas.SQLQueryDataSet, pandasSQLTableDataSet]~=1.0.0
-scikit-learn~=1.0
-hyperopt
-flatten_dict
-deepdiff
+# python version = 3.10
+kedro~=0.18.8
+kedro-datasets[pandas.SQLQueryDataSet, pandasSQLTableDataSet]~=1.2.0
+scikit-learn~=1.2.2
+hyperopt~=0.2.7
+flatten_dict~=0.4.2
+deepdiff~=6.3.0
+xgboost~=1.7.5
+ipykernel~=6.15.0
+plotly~=5.14.1
+seaborn~=0.12.2
+matplotlib~=3.7.1
+nbformat~=5.8.0
