--- a/fpl/src/requirements.txt
+++ b/fpl/src/requirements.txt
@@ -1,6 +1,6 @@
 # python version = 3.10
 kedro~=0.18.8
-kedro-datasets[pandas.SQLQueryDataSet, pandasSQLTableDataSet]~=1.2.0
+kedro-datasets[pandas.SQLQueryDataSet, pandas.SQLTableDataSet, matplotlib.MatplotlibWriter]~=1.2.0
 scikit-learn~=1.2.2
 hyperopt~=0.2.7
 flatten_dict~=0.4.2
