--- a/fpl/conf/base/catalog.yml
+++ b/fpl/conf/base/catalog.yml
@@ -13,6 +13,8 @@ FPL_DATA:
   type: pandas.SQLTableDataSet
   table_name: raw_fpl_data
   credentials: db_credentials
+  save_args:
+    if_exists: replace
 
 TEAM_MATCH_LOG:
   type: pandas.SQLTableDataSet
