--- a/fpl/conf/base/catalog.yml
+++ b/fpl/conf/base/catalog.yml
@@ -8,6 +8,8 @@
 FPL_DATA_CSV:
   type: pandas.CSVDataSet
   filepath: data/raw/backtest_data/merged_seasons.csv
+  load_args:
+    index_col: [0]
 
 FPL_DATA:
   type: pandas.SQLTableDataSet
