--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Run model pipeline",
+            "name": "Train model",
             "type": "python",
             "request": "launch",
             "env": {
@@ -22,7 +22,24 @@
             "justMyCode": false,
         },
         {
-            "name": "Run scraping pipeline",
+            "name": "Optimize",
+            "type": "python",
+            "request": "launch",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}\\fpl"
+            },
+            "cwd": "${workspaceFolder}\\fpl",
+            "program": "src\\fpl\\custom_run\\kedro_cli.py",
+            "args": [
+                "run",
+                "--pipeline",
+                "optimization_pipeline"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+        },
+        {
+            "name": "Scrape",
             "type": "python",
             "request": "launch",
             "env": {
@@ -39,7 +56,7 @@
             "justMyCode": false,
         },
         {
-            "name": "Run Init DB pipeline",
+            "name": "Init DB",
             "type": "python",
             "request": "launch",
             "env": {
@@ -60,7 +77,7 @@
             "type": "python",
             "request": "launch",
             "env": {
-                "PYTHONPATH": "${workspaceFolder}\\fpl"
+                "PYTHONPATH": "${workspaceFolder}\\fpl",
             },
             "cwd": "${workspaceFolder}\\fpl",
             "program": "${file}",
