--- a/fpl/src/requirements.txt
+++ b/fpl/src/requirements.txt
@@ -1,6 +1,6 @@
 # python version = 3.10
 kedro~=0.18.8
-kedro-datasets[pandas.SQLQueryDataSet, pandas.SQLTableDataSet, matplotlib.MatplotlibWriter]~=1.2.0
+kedro-datasets~=1.2.0
 scikit-learn~=1.2.2
 hyperopt~=0.2.7
 flatten_dict~=0.4.2
@@ -9,3 +9,8 @@ xgboost~=1.7.5
 ipykernel~=6.15.0
 seaborn~=0.12.2
 matplotlib~=3.7.1
+pulp~=2.7.0
+cryptography~=40.0.2
+paramiko~=3.1.0
+regex~=2023.5.5
+pyyaml~=6.0
