--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -46,13 +46,19 @@ optimization:
   horizon: 3
   tr_horizon: 2
   wc_on: 8
+  bb_on: null
+  fh_on: null
   timeout: 60
   log: false
   decay: 0.5
+  ft_bonus: 1.5
+  itb_bonus: 0.08
+  bench_weights: {0: 0.03, 1: 0.21, 2: 0.06, 3: 0.002}
+  solver: cplex
   backtest_players:
-    Me: 3531385
+    # Me: 3531385
     Hazard: 1195527
-    FPL Raptor: 5431
+    # FPL Raptor: 5431
     Donald: 307190
 # hyperopt:
 #   target:
