improve backtest speed

--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -55,6 +55,7 @@ optimization:
   itb_bonus: 0.08
   bench_weights: {0: 0.03, 1: 0.21, 2: 0.06, 3: 0.002}
   solver: cplex
+  backtest_player_history: true
   backtest_players:
     # Me: 3531385
     Hazard: 1195527
