--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -1,9 +1,3 @@
-data:
-  elo_learning_rate: 0.1
-  home_away_weight: 0.5
-  start_year: 2017-2018
-  holdout_year: 2021-2022
-
 model:
   target: xg
   numerical_features:
@@ -29,16 +23,51 @@ model:
     - team_odds_2_score
     - att_total
   random_seed: 42
+  pca: true
+  pca_components: 4
+  model: xgboost
   xgboost_params:
     base_score: 0.5
-    n_estimators: 10
+    n_estimators: 95
     early_stopping_rounds: 5
     objective: reg:squarederror
-    learning_rate: 0.01
+    learning_rate: 0.02
     eval_metric: mae
+
+hyperopt:
+  target:
+    name: loss
+    max_trials: 7
+    strategy: min
+  model:
+    pca_components:
+      method: choice
+      values: [1,2,3,4,5,6,7]
+    # xgboost_params:
+    #   learning_rate:
+    #     method: uniform
+    #     low:  0.01
+    #     high: 0.1
+    #   n_estimators:
+    #     method: quniform
+    #     low: 10
+    #     high: 100
+    #     q: 1
+
+######################################
+
+data:
+  elo_learning_rate: 0.1
+  home_away_weight: 0.5
+  start_year: 2017-2018
+  holdout_year: 2021-2022
+
+######################################
 
 housekeeping:
   to_keep: 30
+
+######################################
 
 optimization:
   team_id: 3531385
@@ -61,19 +90,3 @@ optimization:
     Hazard: 1195527
     FPL Raptor: 5431
     Donald: 307190
-hyperopt:
-  target:
-    name: loss
-    max_trials: 100
-    strategy: min
-  model:
-    xgboost_params:
-      learning_rate:
-        method: uniform
-        low:  0.01
-        high: 0.1
-      n_estimators:
-        method: quniform
-        low: 10
-        high: 100
-        q: 1
