--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Train model",
+            "name": "Model pipeline",
             "type": "python",
             "request": "launch",
             "env": {
