--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -43,102 +43,101 @@ model:
   lr_params:
     fit_intercept: True
   gbr_params:
-    n_estimators: 100
-    learning_rate: 0.1
-    subsample: 1.0
-    min_samples_split: 2
-    min_weight_fraction_leaf: 0.0
-    max_depth: 3
-    max_features: null
-    min_impurity_decrease: 0.0
+    n_estimators: 21
+    learning_rate: 1.22
+    subsample: 0.70
+    min_samples_split: 7
+    max_depth: 1
+    max_features: 0.73
+    min_impurity_decrease: 1.34
   rf_params:
-    n_estimators: 100
-    max_depth: null
-    min_impurity_decrease: 0.0
-    max_features: 1.0
+    n_estimators: 10
+    max_depth: 7
+    min_impurity_decrease: 1.12
+    max_features: 0.99
     bootstrap: True
 
-hyperopt:
-  target:
-    name: val_score
-    max_trials: 100
-    strategy: max
-    algo: tpe
-    early_termination: null
-  groups:
-    model:
-      models:
-        - [gbr]
-        - [rf]
-  0:
-    model:
-      model_weights: 
-        method: constant
-        value: [1]
-      gbr_params:
-        n_estimators:
-          method: uniform
-          scope: int
-          low: 10
-          high: 300
-        learning_rate:
-          method: loguniform
-          low: 0.000001
-          high: 0.5
-        subsample:
-          method: uniform
-          low: 0.2
-          high: 1
-        min_samples_split:
-          method: uniform
-          scope: int
-          low: 2
-          high: 10
-        min_samples_leaf:
-          method: uniform
-          scope: int
-          low: 1
-          high: 5
-        max_depth:
-          method: uniform
-          scope: int
-          low: 1
-          high: 11
-        max_features:
-          method: uniform
-          low: 0.4
-          high: 1
-        min_impurity_decrease:
-          method: loguniform
-          low: 0.000000001
-          high: 0.5
-  1:
-    model:
-      model_weights: 
-        method: constant
-        value: [1]
-      rf_params:
-        n_estimators: 
-          method: uniform
-          scope: int
-          low: 10
-          high: 300
-        max_depth: 
-          method: uniform
-          scope: int
-          low: 1
-          high: 11
-        min_impurity_decrease: 
-          method: loguniform
-          low: 0.000000001
-          high: 0.5
-        max_features: 
-          method: uniform
-          low: 0.4
-          high: 1
-        bootstrap:
-          method: choice
-          values: [true, false]
+# hyperopt:
+#   target:
+#     name: val_score
+#     max_trials: 100
+#     strategy: max
+#     algo: tpe
+#     early_termination: null
+#   groups:
+#     model:
+#       models:
+#         - [gbr]
+#         - [rf]
+#   0:
+#     model:
+#       model_weights: 
+#         method: constant
+#         value: [1]
+#       gbr_params:
+#         n_estimators:
+#           method: uniform
+#           scope: int
+#           low: 10
+#           high: 300
+#         learning_rate:
+#           method: loguniform
+#           low: 0.000001
+#           high: 0.5
+#         subsample:
+#           method: uniform
+#           low: 0.2
+#           high: 1
+#         min_samples_split:
+#           method: uniform
+#           scope: int
+#           low: 2
+#           high: 10
+#         min_samples_leaf:
+#           method: uniform
+#           scope: int
+#           low: 1
+#           high: 5
+#         max_depth:
+#           method: uniform
+#           scope: int
+#           low: 1
+#           high: 11
+#         max_features:
+#           method: uniform
+#           low: 0.4
+#           high: 1
+#         min_impurity_decrease:
+#           method: loguniform
+#           low: 0.000000001
+#           high: 0.5
+#   1:
+#     model:
+#       model_weights: 
+#         method: constant
+#         value: [1]
+#       rf_params:
+#         n_estimators: 
+#           method: uniform
+#           scope: int
+#           low: 10
+#           high: 300
+#         max_depth: 
+#           method: uniform
+#           scope: int
+#           low: 1
+#           high: 11
+#         min_impurity_decrease: 
+#           method: loguniform
+#           low: 0.000000001
+#           high: 0.5
+#         max_features: 
+#           method: uniform
+#           low: 0.4
+#           high: 1
+#         bootstrap:
+#           method: choice
+#           values: [true, false]
 
 ######################################
 
