--- a/fpl/conf/base/parameters.yml
+++ b/fpl/conf/base/parameters.yml
@@ -28,12 +28,12 @@ model:
   verbose: false
   sort_models: r2
   models:
-    - huber
-    - ridge
-    - lr
-    - gbr
+    # - huber
+    # - ridge
+    # - lr
+    # - gbr
     - rf
-  model_weights: [1, 1, 1, 1, 1]
+  model_weights: [1]
   huber_params:
     alpha: 2.71
     epsilon: 1.97
@@ -51,93 +51,48 @@ model:
     max_features: 0.73
     min_impurity_decrease: 1.34
   rf_params:
-    n_estimators: 10
+    n_estimators: 1000
     max_depth: 7
     min_impurity_decrease: 1.12
     max_features: 0.99
     bootstrap: True
 
-# hyperopt:
-#   target:
-#     name: val_score
-#     max_trials: 100
-#     strategy: max
-#     algo: tpe
-#     early_termination: null
+hyperopt:
+  target:
+    name: val_score
+    max_trials: 100
+    strategy: max
+    algo: tpe
+    early_termination: null
 #   groups:
 #     model:
 #       models:
 #         - [gbr]
 #         - [rf]
-#   0:
-#     model:
-#       model_weights: 
-#         method: constant
-#         value: [1]
-#       gbr_params:
-#         n_estimators:
-#           method: uniform
-#           scope: int
-#           low: 10
-#           high: 300
-#         learning_rate:
-#           method: loguniform
-#           low: 0.000001
-#           high: 0.5
-#         subsample:
-#           method: uniform
-#           low: 0.2
-#           high: 1
-#         min_samples_split:
-#           method: uniform
-#           scope: int
-#           low: 2
-#           high: 10
-#         min_samples_leaf:
-#           method: uniform
-#           scope: int
-#           low: 1
-#           high: 5
-#         max_depth:
-#           method: uniform
-#           scope: int
-#           low: 1
-#           high: 11
-#         max_features:
-#           method: uniform
-#           low: 0.4
-#           high: 1
-#         min_impurity_decrease:
-#           method: loguniform
-#           low: 0.000000001
-#           high: 0.5
-#   1:
-#     model:
-#       model_weights: 
-#         method: constant
-#         value: [1]
-#       rf_params:
-#         n_estimators: 
-#           method: uniform
-#           scope: int
-#           low: 10
-#           high: 300
-#         max_depth: 
-#           method: uniform
-#           scope: int
-#           low: 1
-#           high: 11
-#         min_impurity_decrease: 
-#           method: loguniform
-#           low: 0.000000001
-#           high: 0.5
-#         max_features: 
-#           method: uniform
-#           low: 0.4
-#           high: 1
-#         bootstrap:
-#           method: choice
-#           values: [true, false]
+  0:
+    model:
+      rf_params:
+        n_estimators: 
+          method: uniform
+          scope: int
+          low: 10
+          high: 300
+        max_depth: 
+          method: uniform
+          scope: int
+          low: 1
+          high: 11
+        min_impurity_decrease: 
+          method: loguniform
+          low: 0.000000001
+          high: 0.5
+        max_features: 
+          method: uniform
+          low: 0.4
+          high: 1
+        bootstrap:
+          method: choice
+          values: [true, false]
 
 ######################################
 
@@ -151,7 +106,7 @@ data:
 
 housekeeping:
   to_keep: 30
-  keep_model_best: 5
+  keep_model_best: 3
   metric: val_r2
   strategy: max
 
