refactor preprocessing pipeline

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Model pipeline",
+            "name": "Model training",
             "type": "python",
             "request": "launch",
             "env": {
@@ -17,6 +17,23 @@
                 "run",
                 "--pipeline",
                 "model_pipeline"
+            ],
+            "console": "integratedTerminal",
+            "justMyCode": false,
+        },
+        {
+            "name": "Data preprocessing",
+            "type": "python",
+            "request": "launch",
+            "env": {
+                "PYTHONPATH": "${workspaceFolder}\\fpl"
+            },
+            "cwd": "${workspaceFolder}\\fpl",
+            "program": "src\\fpl\\custom_run\\kedro_cli.py",
+            "args": [
+                "run",
+                "--pipeline",
+                "preprocess_pipeline"
             ],
             "console": "integratedTerminal",
             "justMyCode": false,
