--- a/fpl/src/requirements.txt
+++ b/fpl/src/requirements.txt
@@ -15,3 +15,8 @@ paramiko~=3.1.0
 regex~=2023.5.5
 pyyaml~=6.0
 pycaret~=3.0.2
+selenium~=4.9.1
+lxml~=4.9.2
+sqlalchemy~=2.0.16
+tenacity~=8.2.2
+black~=23.3.0
